some work on the home page
