# server/api/api.js
@@ -1,6 +1,7 @@
 const express = require('express')
 const userUtilityRouter = require('./user-utility/router')
 const teamUtilityRouter = require('./team-utility/router')
+const fileRouter = require('./files')
 
 const router = express.Router()
 
@@ -8,6 +9,7 @@ router.use(express.json())
 
 router.use('/user-utility', userUtilityRouter)
 router.use('/team-utility', teamUtilityRouter)
+router.use('/files', fileRouter)
 
 router.get('/', (req, res, next) => {
     res.redirect('/docs')
